update rut tien
