# app/Http/Controllers/Api/StoreController.php
@@ -359,14 +359,14 @@ class StoreController extends BaseController
      *         description="Store object that needs to be created",
      *         @OA\JsonContent(
      *             @OA\Property(property="name", type="string", example="Store A"),
-     *             @OA\Property(property="type", type="string", example="individual" ),
+     *             @OA\Property(property="type", type="string", description="individual house, business"),
      *             @OA\Property(property="phone", type="string", example="123456", description="SĐT"),
      *             @OA\Property(property="phone_other", type="string", example="123456", description="SĐT khác"),
      *             @OA\Property(property="phone_contact", type="string", example="123456", description="SĐT liên hệ"),
      *             @OA\Property(property="email", type="string", example="email@gmail.com"),
      *             @OA\Property(property="license", type="string", example="123213", description="Mã số thuế"),
-     *             @OA\Property(property="cccd", type="string", example="email@gmail.com"),
-     *             @OA\Property(property="cccd_date", type="string", example="email@gmail.com"),
+     *             @OA\Property(property="cccd", type="string", example="123456789"),
+     *             @OA\Property(property="cccd_date", type="string", example="2000-05-15"),
      *             @OA\Property(property="image", type="string"),
      *             @OA\Property(property="banner", type="string"),
      *             @OA\Property(property="image_cccd_before", type="string"),
@@ -462,8 +462,8 @@ class StoreController extends BaseController
      *             @OA\Property(property="phone_contact", type="string", example="123456", description="SĐT liên hệ"),
      *             @OA\Property(property="email", type="string", example="email@gmail.com"),
      *             @OA\Property(property="license", type="string", example="123213", description="Mã số thuế"),
-     *             @OA\Property(property="cccd", type="string", example="email@gmail.com"),
-     *             @OA\Property(property="cccd_date", type="string", example="email@gmail.com"),
+     *             @OA\Property(property="cccd", type="string", example="123456789"),
+     *             @OA\Property(property="cccd_date", type="string", example="2000-05-15"),
      *             @OA\Property(property="image", type="string"),
      *             @OA\Property(property="banner", type="string"),
      *             @OA\Property(property="image_cccd_before", type="string"),
